7-security/networkpolicy/app-team1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-team1
  namespace: pro-security
  labels:
    role: team1
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
