7-security/networkpolicy/redis.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: redis
    namespace: pro-security
    labels:
      role: db-team1
  spec:
    containers:
    - name: redis
      image: redis:5.0.4
      command:
        - redis-server
        - "/redis-master/redis.conf"
      ports:
      - containerPort: 6379
      resources:
        limits:
          cpu: "0.1"
      volumeMounts:
      - mountPath: /redis-master-data
        name: data
      - mountPath: /redis-master
        name: config
    volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: db-config
          items:
          - key: redis-config
            path: redis.conf
